Fix: Offer banner scroll, navbar overlap issue

--- a/client/src/css/fandom.css
+++ b/client/src/css/fandom.css
@@ -24,6 +24,7 @@
 
 .fandom-title {
   margin: 1rem;
+  margin-top: 2rem;
   text-align: center;
 }
 
@@ -86,7 +87,7 @@
 
 @media (max-width: 480px) {
   .fandom-header {
-    font-size: 2.5rem;
+    font-size: 1.8rem;
   }
 
   .item {
